--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "author": "Abram Bagus Janitra",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^2.2.0",
     "connect-mongodb-session": "^5.0.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "express-handlebars": "^8.0.3",
     "express-session": "^1.18.2",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.2.17",
-    "mysql2": "^1.6.1",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.1",
+    "mysql2": "^3.14.5",
+    "pug": "^3.0.3",
+    "sequelize": "^6.37.7"
   }
 }
